tested some things in main